gitmodules pour pouvoir avoir le backend

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "projet_dev3"]
 	path = projet_dev3
 	url = https://github.com/hugotnbx/projet_dev3
+
+[submodule "iziplan_backend"]
+    path = iziplan_backend
+    url = https://github.com/hugotnbx/projet_dev3
