--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "@nestjs/common": "^10.3.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
     "call-bind": "^1.0.7",
     "define-data-property": "^1.1.4",
     "function-bind": "^1.1.2",
@@ -31,12 +33,14 @@
     "has-property-descriptors": "^1.0.2",
     "has-proto": "^1.0.3",
     "has-symbols": "^1.0.3",
+    "mysql2": "^3.9.2",
     "object-inspect": "^1.13.1",
     "qs": "^6.11.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "safe-buffer": "^5.2.1",
-    "side-channel": "^1.0.5"
+    "side-channel": "^1.0.5",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
