--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,11 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.0",
+    "@capacitor/camera": "^5.0.9",
+    "@capacitor/filesystem": "^5.2.1",
+    "@capacitor/preferences": "^5.0.7",
+    "@ionic/angular": "^7.7.4",
+    "@ionic/pwa-elements": "^3.2.2",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -39,6 +44,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.3.2"
+    "typescript": "~5.3.2",
+    "@ionic/angular-toolkit": "latest"
   }
 }
