--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
     "has-property-descriptors": "^1.0.2",
     "has-proto": "^1.0.3",
     "has-symbols": "^1.0.3",
+    "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
     "object-inspect": "^1.13.1",
     "qs": "^6.11.0",
