--- a/api/package.json
+++ b/api/package.json
@@ -24,9 +24,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
     "call-bind": "^1.0.7",
     "define-data-property": "^1.1.4",
+    "fastify-swagger": "^5.2.0",
     "function-bind": "^1.1.2",
     "get-intrinsic": "^1.2.4",
     "gopd": "^1.0.1",
