--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nestjs/common": "^10.3.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
@@ -40,6 +41,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
     "object-inspect": "^1.13.1",
+    "passport-jwt": "^4.0.1",
     "qs": "^6.11.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
