--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,14 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.2",
-    "@angular/common": "^17.0.2",
-    "@angular/compiler": "^17.0.2",
-    "@angular/core": "^17.0.2",
     "@angular/forms": "^17.0.2",
-    "@angular/platform-browser": "^17.0.2",
-    "@angular/platform-browser-dynamic": "^17.0.2",
-    "@angular/router": "^17.0.2",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.2",
     "@capacitor/haptics": "5.0.7",
@@ -34,14 +27,24 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.0",
+    "@angular-devkit/core": "^17.3.4",
     "@angular-eslint/builder": "^17.0.0",
     "@angular-eslint/eslint-plugin": "^17.0.0",
     "@angular-eslint/eslint-plugin-template": "^17.0.0",
     "@angular-eslint/schematics": "^17.0.0",
     "@angular-eslint/template-parser": "^17.0.0",
+    "@angular/animations": "^17.3.4",
     "@angular/cli": "^17.0.0",
-    "@angular/compiler-cli": "^17.0.2",
-    "@angular/language-service": "^17.0.2",
+    "@angular/common": "^17.3.4",
+    "@angular/compiler": "^17.3.4",
+    "@angular/compiler-cli": "^17.3.4",
+    "@angular/core": "^17.3.4",
+    "@angular/http": "^7.2.16",
+    "@angular/language-service": "^17.3.4",
+    "@angular/platform-browser": "^17.3.4",
+    "@angular/platform-browser-dynamic": "^17.3.4",
+    "@angular/platform-server": "^17.3.4",
+    "@angular/router": "^17.3.4",
     "@capacitor/cli": "5.7.2",
     "@ionic/angular-toolkit": "11.0.1",
     "@types/jasmine": "~5.1.0",
