--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,8 +14,9 @@
   "private": true,
   "dependencies": {
     "@angular/forms": "^17.0.2",
+    "@capacitor/android": "^5.7.2",
     "@capacitor/app": "5.0.7",
-    "@capacitor/core": "5.7.2",
+    "@capacitor/core": "^5.7.2",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
