--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "@capacitor/core": "^5.7.2",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
+    "@capacitor/share": "^6.0.0",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.0.0",
     "@ionic/storage": "^4.0.0",
