--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,16 +14,20 @@
   "private": true,
   "dependencies": {
     "@angular/forms": "^17.0.2",
+    "@awesome-cordova-plugins/core": "6.7.0",
+    "@awesome-cordova-plugins/deeplinks": "6.7.0",
+    "@awesome-cordova-plugins/social-sharing": "6.7.0",
     "@capacitor/android": "^5.7.2",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "^5.7.2",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
-    "@capacitor/share": "^6.0.0",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.0.0",
     "@ionic/storage": "^4.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "cordova-plugin-x-socialsharing": "^6.0.4",
+    "es6-promise-plugin": "4.2.2",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
