implementation deeplinks , liens qui mene vers l'application (non fonctionnel...)

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,19 +15,22 @@
   "dependencies": {
     "@angular/forms": "^17.0.2",
     "@awesome-cordova-plugins/core": "6.7.0",
-    "@awesome-cordova-plugins/deeplinks": "6.7.0",
+    "@awesome-cordova-plugins/deeplinks": "^6.7.0",
     "@awesome-cordova-plugins/social-sharing": "6.7.0",
     "@capacitor/android": "^5.7.2",
-    "@capacitor/app": "5.0.7",
+    "@capacitor/app": "^5.0.7",
+    "@capacitor/app-links": "github:ionic-team/capacitor-plugins#main",
     "@capacitor/core": "^5.7.2",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
+    "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^7.0.0",
     "@ionic/storage": "^4.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "es6-promise-plugin": "4.2.2",
+    "ionic-plugin-deeplinks": "^1.0.24",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -53,7 +56,7 @@
     "@angular/platform-browser-dynamic": "^17.3.4",
     "@angular/platform-server": "^17.3.4",
     "@angular/router": "^17.3.4",
-    "@capacitor/cli": "5.7.2",
+    "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "11.0.1",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
