--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,19 +13,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/forms": "^17.0.2",
+    "@angular/forms": "^17.3.6",
     "@capacitor/android": "^5.7.2",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "^5.7.2",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
-    "@ionic/angular": "^7.0.0",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic/angular": "^7.8.6",
+    "@ionic/core": "^8.0.1",
     "@ionic/storage": "^4.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "ionicons": "^7.0.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "router": "^1.3.8",
+    "rxjs": "^6.5.0",
+    "tslib": "^2.6.2",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
@@ -36,18 +39,17 @@
     "@angular-eslint/eslint-plugin-template": "^17.0.0",
     "@angular-eslint/schematics": "^17.0.0",
     "@angular-eslint/template-parser": "^17.0.0",
-    "@angular/animations": "^17.3.4",
+    "@angular/animations": "^17.3.6",
     "@angular/cli": "^17.0.0",
-    "@angular/common": "^17.3.4",
-    "@angular/compiler": "^17.3.4",
-    "@angular/compiler-cli": "^17.3.4",
-    "@angular/core": "^17.3.4",
-    "@angular/http": "^7.2.16",
-    "@angular/language-service": "^17.3.4",
-    "@angular/platform-browser": "^17.3.4",
-    "@angular/platform-browser-dynamic": "^17.3.4",
-    "@angular/platform-server": "^17.3.4",
-    "@angular/router": "^17.3.4",
+    "@angular/common": "^17.3.6",
+    "@angular/compiler": "^17.3.6",
+    "@angular/compiler-cli": "^17.3.6",
+    "@angular/core": "^17.3.6",
+    "@angular/language-service": "^17.3.6",
+    "@angular/platform-browser": "^17.3.6",
+    "@angular/platform-browser-dynamic": "^17.3.6",
+    "@angular/platform-server": "^17.3.6",
+    "@angular/router": "^17.3.6",
     "@capacitor/cli": "5.7.2",
     "@ionic/angular-toolkit": "11.0.1",
     "@types/jasmine": "~5.1.0",
