--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,49 +13,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/forms": "17.3.6",
+    "@angular/forms": "17.3.8",
     "@capacitor/android": "6.0.0",
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.0.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
-    "@capacitor/share": "^6.0.0",
+    "@capacitor/share": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
-    "@ionic/angular": "8.0.1",
+    "@ionic/angular": "8.1.1",
     "@ionic/storage": "4.0.0",
     "@ionic/storage-angular": "4.0.0",
-    "ionicons": "7.3.1",
+    "ionicons": "7.4.0",
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
-    "zone.js": "0.14.4"
+    "zone.js": "0.14.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.3.6",
-    "@angular-devkit/core": "17.3.6",
-    "@angular-eslint/builder": "17.3.0",
-    "@angular-eslint/eslint-plugin": "17.3.0",
-    "@angular-eslint/eslint-plugin-template": "17.3.0",
-    "@angular-eslint/schematics": "17.3.0",
-    "@angular-eslint/template-parser": "17.3.0",
-    "@angular/animations": "17.3.6",
-    "@angular/cli": "17.3.6",
-    "@angular/common": "^17.3.6",
-    "@angular/compiler": "17.3.6",
-    "@angular/compiler-cli": "17.3.6",
-    "@angular/core": "17.3.6",
-    "@angular/language-service": "17.3.6",
-    "@angular/platform-browser": "17.3.6",
-    "@angular/platform-browser-dynamic": "17.3.6",
-    "@angular/platform-server": "17.3.6",
-    "@angular/router": "17.3.6",
+    "@angular-devkit/build-angular": "17.3.7",
+    "@angular-devkit/core": "17.3.7",
+    "@angular-eslint/builder": "17.4.0",
+    "@angular-eslint/eslint-plugin": "17.4.0",
+    "@angular-eslint/eslint-plugin-template": "17.4.0",
+    "@angular-eslint/schematics": "17.4.0",
+    "@angular-eslint/template-parser": "17.4.0",
+    "@angular/animations": "17.3.8",
+    "@angular/cli": "17.3.7",
+    "@angular/common": "17.3.8",
+    "@angular/compiler": "17.3.8",
+    "@angular/compiler-cli": "17.3.8",
+    "@angular/core": "17.3.8",
+    "@angular/language-service": "17.3.8",
+    "@angular/platform-browser": "17.3.8",
+    "@angular/platform-browser-dynamic": "17.3.8",
+    "@angular/platform-server": "17.3.8",
+    "@angular/router": "17.3.8",
     "@capacitor/cli": "6.0.0",
     "@ionic/angular-toolkit": "11.0.1",
     "@types/jasmine": "5.1.4",
-    "@typescript-eslint/eslint-plugin": "7.8.0",
-    "@typescript-eslint/parser": "7.0.0",
+    "@typescript-eslint/eslint-plugin": "7.0.0",
+    "@typescript-eslint/parser": "6.0.0",
     "eslint": "8.56.0",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsdoc": "48.2.3",
+    "eslint-plugin-jsdoc": "48.2.4",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "jasmine-core": "5.1.2",
     "jasmine-spec-reporter": "7.0.0",
