--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -12,24 +12,24 @@ services:
       MYSQL_DATABASE: iziplan_db
       MYSQL_USER: iziplan_user
       MYSQL_PASSWORD: iziplan_psw
-    networks:
-      - iziplan_networks
-  app:
-    build: .
-    container_name: iziplan_app
-    ports:
-      - "64000:64000"
-    environment:
-      DB_HOST: mysql
-      DB_USERNAME: iziplan_user
-      DB_PASSWORD: iziplan_psw
-      DB_DATABASE: iziplan_db
-    depends_on:
-      - mysql
-    volumes:
-      - ~/www/certificate:/etc/letsencrypt/
-    networks:
-      - iziplan_networks
+#     networks:
+#       - iziplan_networks
+#   app:
+#     build: .
+#     container_name: iziplan_app
+#     ports:
+#       - "64000:64000"
+#     environment:
+#       DB_HOST: mysql
+#       DB_USERNAME: iziplan_user
+#       DB_PASSWORD: iziplan_psw
+#       DB_DATABASE: iziplan_db
+#     depends_on:
+#       - mysql
+#     volumes:
+#       - ~/www/certificate:/etc/letsencrypt/
+#     networks:
+#       - iziplan_networks
     
-networks:
-   iziplan_networks:
+# networks:
+#    iziplan_networks:
